grafana/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana-enterprise:11.0.0
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: grafana-storage
          mountPath: /var/lib/grafana
      hostAliases:
      - ip: "10.3.0.91"
        hostnames:
        - "nodered.str.local"
      volumes:
      - name: grafana-storage
        persistentVolumeClaim:
          claimName: grafana-pv-claim
